--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency App - Página de ayuda en catástrofes.</title>
+    <meta name="keywords" content="DANA Valencia, ayuda DANA, información DANA Valencia, centros de ayuda, noticias DANA, recogida de material DANA, voluntariado Valencia">
+    <meta name="description" content="Aplicación de ayuda y asistencia en tiempo real para afectados por la DANA en Valencia. Encuentra puntos de recogida, centros de ayuda, y noticias actualizadas sobre el impacto de las lluvias y cómo colaborar.">
 
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <meta name="author" content="Jaume Esquerdo">
     <!-- <style>
     </style> -->
 
