--- a/dana-valencia-2024.html
+++ b/dana-valencia-2024.html
@@ -7,9 +7,9 @@
     <title>Dana Valencia 2024</title>
     <meta name="keywords" content="DANA Valencia, ayuda DANA, información DANA Valencia, centros de ayuda, noticias DANA, recogida de material DANA, voluntariado Valencia">
     <meta name="description" content="Aplicación de ayuda y asistencia en tiempo real para afectados por la DANA en Valencia. Encuentra puntos de recogida, centros de ayuda, y noticias actualizadas sobre el impacto de las lluvias y cómo colaborar.">
-
-    <link rel="stylesheet" href="/css/style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <meta name="author" content="Jaume Esquerdo">
 </head>
@@ -210,17 +210,17 @@
             <h2 class="h2">Noticias en tiempo real</h2>
             <!-- AQUÍ PONER ENLACES EXTERNOS, COMO ALGUNOS TWITTER -->
             <ul class="section__links">
-                <li><a href="https://x.com/abc_es">
-                        <img class="link-twitter" src="/image/abc.jpg" alt="abc">
+                <li><a href="https://x.com/abc_es" target="_blank">
+                        <img class="link-twitter" src="/image/abc.jpg"  alt="abc">
                     </a></li>
-                <li><a href="https://x.com/apunt_media">
-                        <img class="link-twitter" src="/image/apunt.jpg" alt="a punt">
+                <li><a href="https://x.com/apunt_media" target="_blank">
+                        <img class="link-twitter" src="/image/apunt.jpg"  alt="a punt">
                     </a></li>
-                <li><a href="https://x.com/elmundoes">
-                        <img class="link-twitter" src="/image/elmundo.jpg" alt="el mundo">
+                <li><a href="https://x.com/elmundoes" target="_blank">
+                        <img class="link-twitter" src="/image/elmundo.jpg"  alt="el mundo">
                     </a></li>
-                <li><a href="https://x.com/cuatro">
-                        <img class="link-twitter" src="/image/cuatro.jpg" alt="cuatro">
+                <li><a href="https://x.com/cuatro" target="_blank">
+                        <img class="link-twitter" src="/image/cuatro.jpg"  alt="cuatro">
                     </a></li>
                 <li></li>
             </ul>
