--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="DANA Valencia, ayuda DANA, información DANA Valencia, centros de ayuda, noticias DANA, recogida de material DANA, voluntariado Valencia">
     <meta name="description" content="Aplicación de ayuda y asistencia en tiempo real para afectados por la DANA en Valencia. Encuentra puntos de recogida, centros de ayuda, y noticias actualizadas sobre el impacto de las lluvias y cómo colaborar.">
 
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <meta name="author" content="Jaume Esquerdo">
     <!-- <style>
@@ -43,7 +43,7 @@
     </header>
     <main class="main">
 
-        <div class="main__background"></div>
+        <!-- <div class="main__background"></div> -->
         <h1 class="main__titulo"><span class="main__titulo--destacado">Infórmate</span> de los desastres y la ayuda
             disponible.</h1>
 
