--- a/dana-valencia-2024.html
+++ b/dana-valencia-2024.html
@@ -226,7 +226,7 @@
             </ul>
         </section>
 
-        <form id="f" class="form-content" action="voluntariado-form" method="get" id="voluntarios">
+        <form  class="form-content" action="voluntariado-form" method="get" id="voluntarios">
             <header class="formulario__header">
                 <h2 class="formulario__titulo"> Inscripción para Voluntariado</h2>
                 <p class="formulario__descripcion">Si estás interesado en colaborar como voluntario durante esta
